css/main.css
html {
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Noto Sans", sans-serif;
  line-height: 1.5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

[lang="ja"] {
  font-family: "Noto Sans JP", sans-serif;
  font-style: normal;
}

img {
  width: 100%;
}

body {
  margin: 0;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-areas:
  "banner"
  "main"
}

header {
  display: grid;
  grid-area: banner;
  margin: 1em 1em 0 1em;
  padding: 0;
}

header > h1 {
  padding: 0;
  margin: 0;
}
header > h1 > i {
  display: flex;
  justify-content: center;
  font-size: 2rem;
  margin: 0;
  padding: 0;
}

header > h1 > span {
  display: flex;
  justify-content: center;
  font-size: 1.125rem;
  padding: 0;
  margin: 0;
}

header > nav {
  display: flex;
  justify-content: center;
  padding: 0;
  margin: 0;
}

header > img {
  padding-bottom: .5rem;
  padding-top: 0;
}

nav > ul {
  display: flex;
  flex-direction: row;
  color: #3783a3;
  font-size: 1.125rem;
  padding: 0;
  margin: 0;
}

nav > ul > li {
  list-style-type: none;
  display: flex;
  padding: .5em;
}

a {
  color: #3783a3;
  display: flex;
  justify-content: space-between;
}


main {
  display: grid;
  grid-area: main;
  padding: 1em;
  margin: 0;
  border-bottom: .2rem solid #e2e2e2;
}

p {
  font-size: 1rem;
}


main > section {
  border-top: .2rem solid #e2e2e2;
  border-bottom: .2rem solid #e2e2e2;
  margin-bottom: 1.5rem;
}

main > section > i {
  display: flex;
  justify-content: center;
  font-size: 2rem;
  font-weight: normal;
  padding: .5rem .5rem 0 ;
  margin: 0;
  text-align: center;
}

main > section > p {
  display: flex;
  padding: 1rem;
  margin-bottom: 1.5rem;
  text-align: center;
}

main > ul > li > img {
  margin-bottom: 1.5em;

}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}


ul > li {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  justify-content: space-between;
}

li > h2 {
  font-size: 1rem;
  padding: 0;
  margin: 0;
}


ul > li > i {
  font-size: 1.5rem;
  font-weight: bolder;
}

ul > li > p {
  padding: 0;
}

main > ul > li > a {
  text-decoration: none;
  border: .2rem solid #3783a3;
  opacity: 0.70;
  border-radius: .3rem;
  padding: .5em 1em .6em;
  margin-bottom: 1.5rem;
}


footer {
  font-size: 1rem;
  padding: 1em;
  display: flex;
  justify-content: center;
  vertical-align: center;
}

